--- a/index.html
+++ b/index.html
@@ -5,22 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telegram Messaging with Lock</title>
     <style>
-        body {
+      body {
             font-family: Arial, sans-serif;
-            padding: 20px;
+            margin: 0;
+            padding: 0;
+            height: 100vh;
             background-color: #f4f4f9;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         .container {
-            max-width: 400px;
-            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 300px;
         }
-        .hidden {
-            display: none;
-        }
-        input[type="password"], input[type="text"], button {
+        input[type="text"], button {
             width: 100%;
             padding: 10px;
             margin: 10px 0;
+        }
+        h1 {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+        h3 {
+            font-size: 18px;
+            margin-bottom: 10px;
         }
     </style>
 </head>
