--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
     <div class="container">
         <h1>Secure Messaging</h1>
 
+        <p>
+            edi anak sugalle
+        </p>
+
         <div id="lockSection">
             <h3>Enter Password to Unlock Messaging</h3>
             <input type="password" id="password" placeholder="Enter Password">
